[package]
name = "grove"
version = "0.1.0"
authors = ["Alex Tomberg <a.tomberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
getopts = "0.2"
log = "0.4"
num = "0.2"
pbr = "1.0"
twox-hash = "1.5.0"
