[package]
name = "grove"
version = "0.1.0"
authors = ["Alex Tomberg <a.tomberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2"
env_logger = "0.7"
getopts = "0.2"
hogwild = "0.6.1"
log = "0.4"
ndarray = { version = "0.12", features = ["serde-1"] }
num = "0.2"
pbr = "1.0"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
twox-hash = "1.5.0"
